apps/ntfy/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ntfy-virtualservice
spec:
  hosts:
    - ntfy.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ntfy.ntfy.svc.cluster.local
            port:
              number: 80
